@@ -1,7 +1,13 @@
 
+#include <limits>
+
 #include "IntaRNA/IndexRange.h"
 
 namespace IntaRNA {
+
+////////////////////////////////////////////////////////////////
+
+const size_t IndexRange::LAST_INDEX = std::numeric_limits<size_t>::max();
 
 ////////////////////////////////////////////////////////////////
 
